--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://dave-turnbull.github.io/curator/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
